--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "dependencies": {
     "@sendgrid/mail": "^7.6.0",
+    "axios": "^0.25.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.0.0",
     "cors": "2.8.5",
@@ -25,6 +26,7 @@
     "morgan": "1.10.0",
     "multer": "^1.4.4",
     "nanoid": "^3.1.30",
+    "query-string": "^7.1.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2",
