--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-DB_HOST=
-SECRET_KEY=
-SENDGRID_API_KEY=
-PORT=
+DB_HOST
+SECRET_KEY
+SENDGRID_API_KEY
+PORT
+BASE_URL
+FRONTEND_URL
+GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET
