--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./bin/server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./bin/server.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "lint": "eslint **/*.js",
-    "lint:fix": "eslint --fix **/*.js"
+    "lint:fix": "eslint --fix **/*.js",
+    "1-register.test": "node --experimental-vm-modules node_modules/jest/bin/jest.js register.test",
+    "2-login.test": "node --experimental-vm-modules node_modules/jest/bin/jest.js login.test"
   },
   "type": "module",
   "dependencies": {
