--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=production node ./bin/server.js",
+    "start": "cross-env NODE_ENV=production node ./bin/apiServer.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./bin/apiServer.js",
     "lint": "eslint **/*.js",
     "lint:fix": "eslint --fix **/*.js",
@@ -12,6 +12,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@fastify/busboy": "^1.2.1",
     "@sendgrid/mail": "^7.6.0",
     "axios": "^0.25.0",
     "bcryptjs": "^2.4.3",
@@ -19,11 +20,11 @@
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^10.0.0",
-    "express": "4.17.1",
+    "express": "^4.18.2",
     "gravatar": "^1.8.2",
     "http-errors": "^1.8.1",
     "joi": "^17.4.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb-memory-server": "^8.2.0",
     "mongoose": "^6.0.14",
     "morgan": "1.10.0",
