--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "transformIgnorePatterns": [
       "[/\\\\]node_modules[/\\\\](?!@myBem)(.+)[/\\\\].+\\.(js|jsx)"
     ]
+  },
+  "engines": {
+    "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
   }
 }
